tests/bad/continue_outside.oc
/// fail: Continue statement outside of loop

def main() {
    continue
}
